--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }} - سیستم رصد و تحلیل توییتر</title>
+    <title>{{ title|default('سیستم رصد و تحلیل توییتر') }} - سیستم رصد و تحلیل توییتر</title>
     <!-- Bootstrap RTL CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <!-- Font Awesome -->
@@ -22,27 +22,27 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link {% if request.url.path == '/' %}active{% endif %}" href="/">
+                        <a class="nav-link {% if request and request.url and request.url.path == '/' %}active{% endif %}" href="/">
                             <i class="fas fa-home"></i> صفحه اصلی
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.url.path == '/dashboard' %}active{% endif %}" href="/dashboard">
+                        <a class="nav-link {% if request and request.url and request.url.path == '/dashboard' %}active{% endif %}" href="/dashboard">
                             <i class="fas fa-tachometer-alt"></i> داشبورد
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.url.path == '/keywords' %}active{% endif %}" href="/keywords">
+                        <a class="nav-link {% if request and request.url and request.url.path == '/keywords' %}active{% endif %}" href="/keywords">
                             <i class="fas fa-tag"></i> کلیدواژه‌ها
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.url.path == '/collections' %}active{% endif %}" href="/collections">
+                        <a class="nav-link {% if request and request.url and request.url.path == '/collections' %}active{% endif %}" href="/collections">
                             <i class="fas fa-tasks"></i> جمع‌آوری‌ها
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.url.path == '/tweets' %}active{% endif %}" href="/tweets">
+                        <a class="nav-link {% if request and request.url and request.url.path == '/tweets' %}active{% endif %}" href="/tweets">
                             <i class="fab fa-twitter"></i> توییت‌ها
                         </a>
                     </li>
